--- a/Translation/item.json
+++ b/Translation/item.json
@@ -4747,7 +4747,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Đức Hạnh - Mũ",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -4766,7 +4766,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Đức Hạnh - Áo Giáp",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -4785,7 +4785,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Đức Hạnh - Giày",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -4804,7 +4804,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Đức Hạnh - Đai Lưng",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -4823,7 +4823,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Đức Hạnh - Áo Choàng",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -4842,7 +4842,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Bất Hạnh - Vũ Khí",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -4861,7 +4861,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Bất Hạnh - Găng Tay",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -4880,7 +4880,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Bất Hạnh - Nhẫn",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -4899,7 +4899,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Bất Hạnh - Dây Chuyền",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -4918,7 +4918,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Nhân Sư - Dây Chuyền",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -4937,7 +4937,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Nhân Sư - Đai Lưng",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -4956,7 +4956,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Nhân Sư - Mũ",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -4975,7 +4975,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Tướng Cướp - Áo Choàng",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -4994,7 +4994,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Tướng Cướp - Áo Giáp",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -5014,7 +5014,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Tinh Linh - Vũ Khí",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -5033,7 +5033,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Tinh Linh - Găng Tay",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -5052,7 +5052,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Tinh Linh - Giày",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -5071,7 +5071,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Tinh Linh - Dây Chuyền",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -5090,7 +5090,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Tinh Linh - Áo Choàng",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -5109,7 +5109,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Tinh Linh - Mũ",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -5128,7 +5128,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Tinh Linh - Áo Giáp",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -5147,7 +5147,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Tinh Linh - Đai Lưng",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -5166,7 +5166,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Tinh Linh - Nhẫn",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -5186,7 +5186,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Tận Thế - Vũ Khí",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -5205,7 +5205,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Tận Thế - Găng Tay",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -5224,7 +5224,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Tận Thế - Giày",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -5243,7 +5243,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Tận Thế - Giây Chuyền",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -5262,7 +5262,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Tận Thế - Áo Choàng",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -5281,7 +5281,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Tận Thế - Mũ",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -5300,7 +5300,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Tận Thế - Áo Giáp",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -5319,7 +5319,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Tận Thế - Đai Lưng",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -5338,7 +5338,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Tận Thế - Nhẫn",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -5358,7 +5358,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Shalim - Vũ Khí",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -5377,7 +5377,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Shalim - Găng Tay",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -5396,7 +5396,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Shalim - Giày",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -5415,7 +5415,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Shalim - Dây Chuyền",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -5434,7 +5434,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Shalim - Áo Choàng",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -5453,7 +5453,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Shalim - Mũ",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -5472,7 +5472,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Shalim - Áo Giáp",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -5491,7 +5491,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Shalim - Đai Lưng",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -5510,7 +5510,7 @@
 		"de": "",
 		"jp": "",
 		"pt": "",
-		"vi": "",
+		"vi": "Shalim - Nhẫn",
 		"ar": "",
 		"it": "",
 		"pl": "",
@@ -7904,7 +7904,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"",
+		"vi":"[Linh Trứng] Bầy Nhày Băng",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -7923,7 +7923,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"",
+		"vi":"[Linh Trứng] Cua Băng",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -7942,7 +7942,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"",
+		"vi":"[Linh Trứng] Hải Tặc Băng Tuyết",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -7961,7 +7961,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"",
+		"vi":"[Linh Trứng] Gấu Lãnh Nguyên",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -7980,7 +7980,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"",
+		"vi":"[Linh Trứng] Sói Lãnh Nguyên",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -7999,7 +7999,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"",
+		"vi":"[Linh Trứng] Người Tuyết",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -8018,7 +8018,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"",
+		"vi":"[Linh Trứng] Dơi Băng",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -8037,7 +8037,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"",
+		"vi":"[Linh Trứng] Cây Hartland Băng",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -8056,7 +8056,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"",
+		"vi":"[Linh Trứng] Nhện Băng",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -8075,7 +8075,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"",
+		"vi":"[Linh Trứng] Khổng Lồ Băng",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -8094,7 +8094,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"",
+		"vi":"[Linh Trứng] Vượng Thépf",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -8113,7 +8113,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"",
+		"vi":"[Linh Trứng] Tượng Băng",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -8132,7 +8132,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"",
+		"vi":"[Linh Trứng] Lãnh Long",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -8151,7 +8151,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"",
+		"vi":"[Linh Trứng] Vệ Binh Quỷ",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -8170,7 +8170,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"",
+		"vi":"[Linh Trứng] Cảnh Binh Quỷ",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -8189,7 +8189,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"",
+		"vi":"[Linh Trứng] Xạ Thủ Xương Khô",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -8208,7 +8208,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"",
+		"vi":"[Linh Trứng] Lính Xương Khô",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -8227,7 +8227,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"",
+		"vi":"[Linh Trứng] Kỵ Sĩ Xương Khô",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -8246,7 +8246,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"",
+		"vi":"[Linh Trứng] Phù Thủy Xương Khô",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -8265,7 +8265,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"",
+		"vi":"[Linh Trứng] Kẹp Thịt Bé",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -8284,7 +8284,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"",
+		"vi":"[Linh Trứng] Dơi Kinh Tởm",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -8303,7 +8303,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"",
+		"vi":"[Linh Trứng] Linh Hồn Bị Dày Vò",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -8322,7 +8322,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Kỹ Sư Cách Tân",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8341,7 +8341,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Kỳ Lân Lãnh Nguyên",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8360,7 +8360,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Lãnh Long Trưởng Thành",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8379,7 +8379,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Lãnh Nguyên] Kiếm Phép Roland",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8398,7 +8398,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Lãnh Chúa Quỷ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8417,7 +8417,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Chỉ Huy Vệ Binh Thành Phố Vinh Quang",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8550,7 +8550,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Người Giữ Mộ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -10982,7 +10982,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"",
+		"vi":"Bầy Nhày Băng",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -11001,7 +11001,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"",
+		"vi":"Cua Băng",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -11020,7 +11020,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"",
+		"vi":"Hải Tặc Băng Tuyết",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -11039,7 +11039,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"",
+		"vi":"Gấu Lãnh Nguyên",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -11058,7 +11058,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"",
+		"vi":"Sói Lãnh Nguyên",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -11077,7 +11077,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"",
+		"vi":"Người Tuyết",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -11096,7 +11096,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"",
+		"vi":"Dơi Băng",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -11115,7 +11115,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"",
+		"vi":"Cây Hartland Băng",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -11134,7 +11134,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"",
+		"vi":"Nhện Băng",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -11153,7 +11153,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"",
+		"vi":"Khổng Lồ Băng",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -11172,7 +11172,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"",
+		"vi":"Vượn Thép",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -11191,7 +11191,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"",
+		"vi":"Tượng Băng",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -11210,7 +11210,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"",
+		"vi":"Lãnh Long",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -11229,7 +11229,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"",
+		"vi":"Vệ Binh Quỷ",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -11248,7 +11248,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"",
+		"vi":"Cảnh Binh Quỷ",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -11267,7 +11267,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"",
+		"vi":"Xạ Thủ Xương Khô",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -11286,7 +11286,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"",
+		"vi":"Lính Xương Khô",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -11305,7 +11305,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"",
+		"vi":"Kỵ Sĩ Xương Khô",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -11324,7 +11324,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"",
+		"vi":"Phù Thủy Xương Khô",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -11343,7 +11343,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"",
+		"vi":"Kẹp Thịt Bé",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -11362,7 +11362,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"",
+		"vi":"Dơi Kinh Tởm",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -11381,7 +11381,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"",
+		"vi":"Linh Hồn Bị Dày Vò",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -11400,7 +11400,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Kỹ Sư Cách Tân",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11419,7 +11419,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Kỳ Lân Lãnh Nguyên",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11438,7 +11438,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Lãnh Long Trưởng Thành",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11457,7 +11457,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Kiếm Phép Roland",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11476,7 +11476,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Lãnh Chúa Quỷ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11495,7 +11495,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Chỉ Huy Vệ Binh Thành Phố Vinh Quang",
         "ar":"",
         "it":"",
         "pl":"",
@@ -11628,7 +11628,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Người Giữ Mộ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -20741,7 +20741,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[D] Mảnh Kim Loại Âm Ty",
         "ar":"",
         "it":"",
         "pl":"",
@@ -20760,7 +20760,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[C] Mảnh Kim Loại Âm Ty",
         "ar":"",
         "it":"",
         "pl":"",
@@ -20779,7 +20779,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[B] Mảnh Kim Loại Âm Ty",
         "ar":"",
         "it":"",
         "pl":"",
@@ -20798,7 +20798,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[A] Mảnh Kim Loại Âm Ty",
         "ar":"",
         "it":"",
         "pl":"",
@@ -20817,7 +20817,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[D] Tinh Thể Duyên Phận",
         "ar":"",
         "it":"",
         "pl":"",
@@ -20836,7 +20836,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[C] Tinh Thể Duyên Phận",
         "ar":"",
         "it":"",
         "pl":"",
@@ -20855,7 +20855,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[B] Tinh Thể Duyên Phận",
         "ar":"",
         "it":"",
         "pl":"",
@@ -20874,7 +20874,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[A] Tinh Thể Duyên Phận",
         "ar":"",
         "it":"",
         "pl":"",
@@ -20893,7 +20893,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[D] Tinh Thể Tân Sinh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -20912,7 +20912,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[C] Tinh Thể Tân Sinh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -20931,7 +20931,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[B] Tinh Thể Tân Sinh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -20950,7 +20950,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[A] Tinh Thể Tân Sinh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -22413,7 +22413,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cuộn Bảo Hộ",
         "ar":"",
         "it":"",
         "pl":"",
