--- a/Translation/instance.json
+++ b/Translation/instance.json
@@ -683,7 +683,7 @@
         "th": "",
         "id": ""
     },
-    "instance.INSTANCE_70_OLD.name":{
+    "instance.INSTANCE_70.name":{
         "en": "Nordic Lands",
         "fr": "Terres Nordiques",
         "es": "Tierras Nórdicas",
