--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -9442,6 +9442,158 @@
         "th":"",
         "id":""
     },
+    "UI.windows.devil_transport.title":{
+        "en":"Devil's Transport Party",
+        "fr":"Groupe de transport du diable",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.devil_transport.40.instruction":{
+        "en":"",
+        "fr":"",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.devil_transport.50.instruction":{
+        "en":"",
+        "fr":"",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.devil_transport.60.instruction":{
+        "en":"",
+        "fr":"",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.devil_transport.70.instruction":{
+        "en":"",
+        "fr":"",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.devil_transport.80.instruction":{
+        "en":"Talk to Zack in Rebel Camp to accept the daily escort quest.",
+        "fr":"Parlez à Sack dans le Camp des Rebelles pour accepter la quête d'escorte quotidienne.",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.devil_transport.90.instruction":{
+        "en":"Talk to Sack in Rebel Camp to accept the daily escort quest.",
+        "fr":"Parlez à Sack dans le Camp des Rebelles pour accepter la quête d'escorte quotidienne.",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.devil_transport.100.instruction":{
+        "en":"Talk to Jerry in Port of Silence to accept the daily escort quest.",
+        "fr":"Parlez à Jerry au Port du Silence pour accepter la quête d'escorte quotidienne.",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "UI.windows.abyss.title":{
         "en":"Abyss",
         "fr":"Abysse",
