--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -9594,6 +9594,44 @@
         "th":"",
         "id":""
     },
+    "UI.windows.devil_transport.button.teleport":{
+        "en":"Teleport",
+        "fr":"Se téléporter",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.devil_transport.button.show-routing":{
+        "en":"Show route",
+        "fr":"Afficher l'itinéraire",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "UI.windows.abyss.title":{
         "en":"Abyss",
         "fr":"Abysse",
