devil's transport UI count

--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -9651,6 +9651,44 @@
         "th":"",
         "id":""
     },
+    "UI.windows.devil_transport.escort_left":{
+        "en":"Devil's Transport times left today: ",
+        "fr":"Nombre de Transport du Diable restant : ",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.devil_transport.robbery_left":{
+        "en":"Righteous Robbery times left today: ",
+        "fr":"Nombre de Vol Vertueux restant : ",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "UI.windows.abyss.title":{
         "en":"Abyss",
         "fr":"Abysse",
