Sea Bottom Arena

--- a/Translation/map.json
+++ b/Translation/map.json
@@ -2528,7 +2528,7 @@
     },
     "map.Challenge_45.name":{
         "en":"Subterranean Coliseum",
-        "fr":"",
+        "fr":"Colisée souterrain",
         "es":"",
         "zh-cn":"地下竞技场",
         "zh-tw":"",
@@ -2539,6 +2539,25 @@
         "jp":"",
         "pt":"",
         "vi":"Đấu Trường Ngầm",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "map.Challenge_55A.name":{
+        "en":"Nagarian Fight Pit",
+        "fr":"Fosse de combat Nagarienne",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
         "ar":"",
         "it":"",
         "pl":"",
