--- a/Translation/item.json
+++ b/Translation/item.json
@@ -27216,6 +27216,159 @@
 		"th": "",
 		"id": ""
 	},
+    "item.71040.name": {
+		"en": "Blue Butterfly Wings - IV",
+		"fr": "Ailes de Papillon Bleu - IV",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.71044.name": {
+		"en": "Green Butterfly Wings - IV",
+		"fr": "Ailes de Papillon Verte - IV",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.71048.name": {
+		"en": "Purple Butterfly Wings - IV",
+		"fr": "Ailes de Papillon Violette - IV",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.71052.name": {
+		"en": "Pink Butterfly Wings - IV",
+		"fr": "Ailes de Papillon Rose - IV",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	
+	"item.71040.name": {
+		"en": "Glowing Blue Butterfly Wings - IV",
+		"fr": "Ailes de Papillon Fluorescent Bleu - IV",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.71044.name": {
+		"en": "Glowing Green Butterfly Wings - IV",
+		"fr": "Ailes de Papillon Fluorescent Verte - IV",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.71048.name": {
+		"en": "Glowing Purple Butterfly Wings - IV",
+		"fr": "Ailes de Papillon Fluorescent Violette - IV",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.71052.name": {
+		"en": "Glowing Pink Butterfly Wings - IV",
+		"fr": "Ailes de Papillon Fluorescent Rose - IV",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
 	"item.74000.name": {
 		"en": "Abel - I",
 		"fr": "Abel - I",
