--- a/Translation/item.json
+++ b/Translation/item.json
@@ -13747,6 +13747,25 @@
         "th":"",
         "id":""
     },
+    "item.6081.name":{
+        "en":"Initial Hairstyle (Black)",
+        "fr":"Coiffure Initiale (Noir)",
+        "es":"",
+        "zh-cn":"初始发型(Black)",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Kiểu Tóc Mở Đầu (Black)",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.6004.name":{
         "en":"Punk (Red)",
         "fr":"Punk (Rouge)",
