--- a/Translation/item.json
+++ b/Translation/item.json
@@ -13671,6 +13671,25 @@
         "th":"",
         "id":""
     },
+    "item.5056.name":{
+        "en":"Cloud (Black)",
+        "fr":"Cloud (Noir)",
+        "es":"",
+        "zh-cn":"克劳德 (黑发)",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Cloud (Tóc đen)",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.6000.name":{
         "en":"Initial Hairstyle (Green)",
         "fr":"Coiffure Initiale (Vert)",
