--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -3153,6 +3153,25 @@
         "th":"",
         "id":""
     },
+    "UI.windows.consign.buy.content":{
+        "en":"You are about to buy {0} for {1} gold. Continue?",
+        "fr":"Vous allez acheter {0} pour {1} pieces d'or. Continuer?",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "UI.windows.fait.token-shop.btn.buy":{
         "en":"{0} Token",
         "fr":"{0} Token",
