--- a/Translation/item.json
+++ b/Translation/item.json
@@ -15267,6 +15267,25 @@
         "th":"",
         "id":""
     },
+    "item.6084.name":{
+        "en":"Spikey (Black)",
+        "fr":"Pointu (Noir)",
+        "es":"",
+        "zh-cn":"刺 (黑发)",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Vuốt Nhọn (Tóc đen)",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.7000.name":{
         "en":"Minor Healing Potion",
         "fr":"Potion de Guérison Mineure",
