--- a/Translation/item.json
+++ b/Translation/item.json
@@ -27904,6 +27904,25 @@
 		"th": "",
 		"id": ""
 	},
+	"item.71072.name": {
+		"en": "Glowing Phoenix - IV",
+		"fr": "Phoenix Fluorescent - IV",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
 	"item.74000.name": {
 		"en": "Abel - I",
 		"fr": "Abel - I",
